# SubspacePartition

./: .gitignore  R-custom-x0.post(1).pt  README.md  R_config-custom-x0.post.json  build_index_test.ipynb  cache_act_test.ipynb  copy_transformer.pt  copy_transformer_training.ipynb  demo.ipynb  pyproject.toml  subspace_partition_on_colab.ipynb  subspace_partition_test.ipynb  test.ipynb  train_log-custom-x0.post.txt
copy_transformer/: data.py  tokenizer.py  training.py
dataset/: ravel_250.json
preimage/: app.py  cache_act.py
preimage/pages/: with_attribution.py
subspace_partition/: subspace_partition.py
subspace_partition/dataset/: prompts_greater_than.json  prompts_ioi.json
subspace_partition/preimage/: app.py  build_index.py  cache_act.py
subspace_partition/training/: data.py  model.py
test_outputs/test_experiment/: R-custom-x0.post.pt  R-custom-x1.post.pt  train_log-custom-x0.post.txt  train_log-custom-x1.post.txt
trainedRs/gpt2-newmerge-red_bear-metric-euclidean-unit_size-32-search_steps-25-data_source-minipile-merge_thr-0.04-merge_start-20000-merge_interval-8000-max_steps-100000/: R-gpt2-x0.post.pt  R-gpt2-x1.post.pt  R-gpt2-x10.post.pt  R-gpt2-x2.post.pt  R-gpt2-x3.post.pt  R-gpt2-x6.post.pt  R-gpt2-x9.post.pt  R_config-gpt2-x0.pre.json  R_config-gpt2-x11.post.json  R_config-gpt2-x4.post.json  R_config-gpt2-x8.post.json  eval_log_identity.txt  eval_log_random.txt  mi_log-random-gpt2.txt  train_log-gpt2-x1.post.txt  train_log-gpt2-x11.post.txt  train_log-gpt2-x2.post.txt  train_log-gpt2-x3.post.txt  train_log-gpt2-x6.post.txt  training_args.json  (+2 more)
(+1 files in other folders)
